[gd_scene load_steps=72 format=3 uid="uid://cbdggtmlpwk7n"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_7wbfd"]
[ext_resource type="Script" path="res://Scripts/zoom.gd" id="2_4a8fq"]
[ext_resource type="Texture2D" uid="uid://bqyq78b55hdwp" path="res://assets/tiles/edgeTileBackground.png" id="2_i73xq"]
[ext_resource type="Texture2D" uid="uid://bk155nwdel3xh" path="res://assets/background/gameBackground.png" id="3_1dlq8"]
[ext_resource type="Texture2D" uid="uid://18h4l4w1kyks" path="res://assets/tiles/tileBackground.png" id="3_1fxtn"]
[ext_resource type="AudioStream" uid="uid://dss410n04r5m5" path="res://assets/sound/simpleClick.wav" id="3_45d03"]
[ext_resource type="Texture2D" uid="uid://byjgr6mkklsi7" path="res://assets/icons/edgeIcon.png" id="3_oj1se"]
[ext_resource type="Texture2D" uid="uid://ccq2xnd4mh8i2" path="res://assets/tiles/edgeTileBackgroundAlt.png" id="3_wfksh"]
[ext_resource type="Texture2D" uid="uid://cpfflbcp3n1a4" path="res://assets/icons/vertexIcon.png" id="4_stjam"]
[ext_resource type="Script" path="res://Scripts/edgesTileMap.gd" id="4_y7ov5"]
[ext_resource type="Texture2D" uid="uid://cs148lp16tu6x" path="res://assets/tiles/edgeTileSelectedAlt.png" id="5_2julx"]
[ext_resource type="Texture2D" uid="uid://b82jnhfauk5o4" path="res://assets/icons/handIcon.png" id="5_iwcoh"]
[ext_resource type="Texture2D" uid="uid://cvwg0qwx6q6qf" path="res://assets/tiles/edgeTileHovered.png" id="5_tv0kh"]
[ext_resource type="Texture2D" uid="uid://bnigoiw2s20sn" path="res://assets/tiles/edgeTileHoveredAlt.png" id="6_bxwoi"]
[ext_resource type="Texture2D" uid="uid://dla2vgbn0bgm0" path="res://assets/icons/pause.png" id="6_jpoir"]
[ext_resource type="Texture2D" uid="uid://damgi0apbja5f" path="res://assets/tiles/edgeTileSelected.png" id="7_kq5mi"]
[ext_resource type="Texture2D" uid="uid://bwtj6b5bc6fx3" path="res://assets/tiles/dotTileColor.png" id="7_orf88"]
[ext_resource type="Texture2D" uid="uid://b8pupyasumdkf" path="res://assets/icons/cross.png" id="7_r8w3x"]
[ext_resource type="Texture2D" uid="uid://dpq083wqjdqpi" path="res://assets/tiles/dotTileSelected.png" id="8_47n8j"]
[ext_resource type="Texture2D" uid="uid://cm4vjfpjdds5y" path="res://assets/icons/checkMark.png" id="8_c41o6"]
[ext_resource type="Texture2D" uid="uid://dgbpjl0xpt5nn" path="res://assets/tiles/edgeTileFuture.png" id="9_k3tl7"]
[ext_resource type="Script" path="res://Scripts/vertexTileMap.gd" id="9_l4svq"]
[ext_resource type="Texture2D" uid="uid://smaud5la27ut" path="res://assets/tiles/dotTileHovered.png" id="9_teopa"]
[ext_resource type="Texture2D" uid="uid://bpwcee1033k8j" path="res://assets/tiles/edgeTileFutureAlt.png" id="10_v2h7l"]
[ext_resource type="Texture2D" uid="uid://cjvdiee0psnw1" path="res://assets/tiles/edgeTileColor.png" id="11_pmc3y"]
[ext_resource type="Texture2D" uid="uid://tn4qo46xgkfq" path="res://assets/tiles/edgeTileColorAlt.png" id="12_0jeec"]
[ext_resource type="AudioStream" uid="uid://c3mtpg4ti4sgs" path="res://assets/sound/gameMusic.mp3" id="20_8ngip"]
[ext_resource type="PackedScene" uid="uid://cijaooi8ujuay" path="res://Scenes/paused_menu.tscn" id="25_71ny5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xu0hk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_77d87"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cpacc"]
texture = ExtResource("6_jpoir")
modulate_color = Color(0.730305, 0.72245, 0.724408, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rpiae"]
texture = ExtResource("6_jpoir")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b6kqa"]

[sub_resource type="Theme" id="Theme_vu814"]
Button/styles/disabled = SubResource("StyleBoxTexture_xu0hk")
Button/styles/focus = SubResource("StyleBoxTexture_77d87")
Button/styles/hover = SubResource("StyleBoxTexture_cpacc")
Button/styles/normal = SubResource("StyleBoxTexture_rpiae")
Button/styles/pressed = SubResource("StyleBoxTexture_b6kqa")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e8jtd"]
texture = ExtResource("3_oj1se")
modulate_color = Color(1, 0.686275, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pae4c"]
texture = ExtResource("3_oj1se")

[sub_resource type="Theme" id="Theme_vomcj"]
Button/styles/hover = SubResource("StyleBoxTexture_e8jtd")
Button/styles/normal = SubResource("StyleBoxTexture_pae4c")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_upvtb"]
texture = ExtResource("4_stjam")
modulate_color = Color(0.642023, 0.919051, 0.478985, 0.705882)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2irpw"]
texture = ExtResource("4_stjam")

[sub_resource type="Theme" id="Theme_0lt5d"]
Button/styles/hover = SubResource("StyleBoxTexture_upvtb")
Button/styles/normal = SubResource("StyleBoxTexture_2irpw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vhjc6"]
texture = ExtResource("5_iwcoh")
modulate_color = Color(0.866322, 0.942713, 1, 0.898039)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u3wdu"]
texture = ExtResource("5_iwcoh")

[sub_resource type="Theme" id="Theme_7gur6"]
Button/styles/hover = SubResource("StyleBoxTexture_vhjc6")
Button/styles/normal = SubResource("StyleBoxTexture_u3wdu")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtlnk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ndjq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q52fm"]
texture = ExtResource("7_r8w3x")
modulate_color = Color(0.929412, 0.929412, 0.929412, 0.886275)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7b0t2"]
texture = ExtResource("7_r8w3x")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gfyp5"]

[sub_resource type="Theme" id="Theme_ipqs6"]
Button/styles/disabled = SubResource("StyleBoxEmpty_qtlnk")
Button/styles/focus = SubResource("StyleBoxEmpty_8ndjq")
Button/styles/hover = SubResource("StyleBoxTexture_q52fm")
Button/styles/normal = SubResource("StyleBoxTexture_7b0t2")
Button/styles/pressed = SubResource("StyleBoxEmpty_gfyp5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7s2x8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cn11u"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sclro"]
texture = ExtResource("8_c41o6")
modulate_color = Color(1, 1, 1, 0.760784)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_to1kj"]
texture = ExtResource("8_c41o6")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rqpo7"]

[sub_resource type="Theme" id="Theme_4oc5f"]
Button/styles/disabled = SubResource("StyleBoxEmpty_7s2x8")
Button/styles/focus = SubResource("StyleBoxEmpty_cn11u")
Button/styles/hover = SubResource("StyleBoxTexture_sclro")
Button/styles/normal = SubResource("StyleBoxTexture_to1kj")
Button/styles/pressed = SubResource("StyleBoxEmpty_rqpo7")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ki6yq"]
texture = ExtResource("3_1fxtn")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_axps3"]
texture = ExtResource("2_i73xq")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vwofr"]
texture = ExtResource("10_v2h7l")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iwo18"]
texture = ExtResource("3_wfksh")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_830rr"]
texture = ExtResource("11_pmc3y")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cdnow"]
texture = ExtResource("12_0jeec")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r77kr"]
texture = ExtResource("5_tv0kh")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i8yvx"]
texture = ExtResource("6_bxwoi")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m65ch"]
texture = ExtResource("7_kq5mi")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_knop5"]
texture = ExtResource("5_2julx")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kfulk"]
texture = ExtResource("9_k3tl7")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_h1xgk"]
tile_size = Vector2i(48, 48)
sources/2 = SubResource("TileSetAtlasSource_iwo18")
sources/1 = SubResource("TileSetAtlasSource_axps3")
sources/0 = SubResource("TileSetAtlasSource_ki6yq")
sources/3 = SubResource("TileSetAtlasSource_830rr")
sources/4 = SubResource("TileSetAtlasSource_cdnow")
sources/5 = SubResource("TileSetAtlasSource_r77kr")
sources/6 = SubResource("TileSetAtlasSource_i8yvx")
sources/7 = SubResource("TileSetAtlasSource_m65ch")
sources/8 = SubResource("TileSetAtlasSource_knop5")
sources/10 = SubResource("TileSetAtlasSource_vwofr")
sources/9 = SubResource("TileSetAtlasSource_kfulk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mwftc"]
texture = ExtResource("7_orf88")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aimpw"]
texture = ExtResource("9_teopa")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jnpln"]
texture = ExtResource("8_47n8j")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ftpqk"]
tile_size = Vector2i(48, 48)
sources/0 = SubResource("TileSetAtlasSource_mwftc")
sources/1 = SubResource("TileSetAtlasSource_aimpw")
sources/2 = SubResource("TileSetAtlasSource_jnpln")

[node name="Game" type="Node2D"]
script = ExtResource("1_7wbfd")
WIDTH_TILES = 20
HEIGHT_TILES = 20

[node name="UnknoterNode" type="UnknoterNode" parent="."]

[node name="Zoom" type="Camera2D" parent="."]
position = Vector2(576, 324)
anchor_mode = 0
script = ExtResource("2_4a8fq")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
offset_left = 20.0
offset_top = 28.0
offset_right = 1150.0
offset_bottom = 666.0
size_flags_vertical = 8

[node name="BackToMenuButton" type="Button" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_vu814")
theme_override_font_sizes/font_size = 23
alignment = 0
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(200, 160)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="edgeButton" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_vomcj")
theme_override_font_sizes/font_size = 25

[node name="vertexButton" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme = SubResource("Theme_0lt5d")
theme_override_font_sizes/font_size = 25

[node name="moveButton" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme = SubResource("Theme_7gur6")
theme_override_font_sizes/font_size = 25

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="PlayerLabel" type="Label" parent="UI/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Игрок "

[node name="EnergyLabel" type="Label" parent="UI/MarginContainer/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Энергия: "

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 1

[node name="CancelButton" type="Button" parent="UI/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme = SubResource("Theme_ipqs6")

[node name="ConfirmButton" type="Button" parent="UI/MarginContainer/HBoxContainer"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme = SubResource("Theme_4oc5f")

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource("3_45d03")
volume_db = -18.0
bus = &"SFX"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -541.0
offset_top = -1323.0
offset_right = 2350.0
offset_bottom = 1805.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1dlq8")
expand_mode = 3

[node name="EdgeTileMap" type="TileMap" parent="."]
position = Vector2(679, -1400)
rotation = 0.785398
tile_set = SubResource("TileSet_h1xgk")
format = 2
layer_1/name = "Layer1"
layer_1/tile_data = PackedInt32Array()
script = ExtResource("4_y7ov5")

[node name="VertexTileMap" type="TileMap" parent="."]
position = Vector2(679, -1434)
rotation = 0.785398
tile_set = SubResource("TileSet_ftpqk")
format = 2
script = ExtResource("9_l4svq")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_8ngip")
volume_db = -2.0
autoplay = true
bus = &"Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PausedMenu" parent="CanvasLayer" instance=ExtResource("25_71ny5")]

[connection signal="pressed" from="UI/MarginContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/HBoxContainer/edgeButton" to="." method="_on_edge_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/HBoxContainer/vertexButton" to="." method="_on_vertex_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/HBoxContainer/moveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="edgeHovered" from="EdgeTileMap" to="." method="_on_edge_hovered"]
[connection signal="edgePressed" from="EdgeTileMap" to="." method="_on_edge_pressed"]
[connection signal="edgeUnhovered" from="EdgeTileMap" to="." method="_on_edge_unhovered"]
[connection signal="edgeUnpressed" from="EdgeTileMap" to="." method="_on_edge_unpressed"]
[connection signal="vertexHovered" from="VertexTileMap" to="." method="_on_vertex_hovered"]
[connection signal="vertexPressed" from="VertexTileMap" to="." method="_on_vertex_pressed"]
[connection signal="vertexUnhovered" from="VertexTileMap" to="." method="_on_vertex_unhovered"]
[connection signal="save" from="CanvasLayer/PausedMenu" to="." method="_on_save"]
